# RedPackage

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/easyar/samples/helloarmultitargetst/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Matrices.cc  Matrices.hpp  ar.cc  ar.hpp  helloar.cc  renderer.cc  renderer.hpp
app/src/main/java/cn/easyar/samples/helloarmultitargetst/: FindTargetActivity.java  Image3DActivity.java  MainActivity.java
app/src/main/java/cn/easyar/samples/helloarmultitargetst/camera/: AiyaCamera.java  AiyaCamera2.java  CameraActivity.java  CameraDrawer.java  CameraView.java  IAiyaCamera.java  ICamera.java  KitkatCamera.java
app/src/main/java/cn/easyar/samples/helloarmultitargetst/filter/: AFilter.java  Beauty.java  GrayFilter.java  NoFilter.java  OesFilter.java
app/src/main/java/cn/easyar/samples/helloarmultitargetst/utils/: Gl2Utils.java  PermissionUtils.java  ShaderUtils.java  VaryTools.java
app/src/main/java/com/maneater/ar/: ARManager.java  CreateTargetActivity.java  GLView.java  ImageView3D.java
app/src/main/java/com/maneater/ar/camera/: AutoFocusManager.java  CameraConfigurationManager.java  CameraManager.java  Degrees.java  ImageUtil.java  PreviewCallback.java
app/src/main/java/com/maneater/ar/camera/open/: OpenCameraInterface.java
app/src/main/res/drawable/: success_animate_drawable.xml
app/src/main/res/layout/: activity_camera.xml  activity_create_target.xml  activity_find.xml  activity_image3_d.xml  activity_main.xml
app/src/test/java/cn/easyar/samples/helloarmultitargetst/: ExampleUnitTest.java
